--- a/index.html
+++ b/index.html
@@ -106,22 +106,22 @@
         <div class="reviews-container">
             <div class="video-grid">
                 <div class="video-card">
-                    <video src="./assets/videos/review1.mp4" controls></video>
+                    <video src="./assets/videos/review1.mp4" controls volume="0.3"></video>
                 </div>
                 <div class="video-card">
-                    <video src="./assets/videos/review2.mp4" controls></video>
+                    <video src="./assets/videos/review2.mp4" controls volume="0.3"></video>
                 </div>
                 <div class="video-card">
-                    <video src="./assets/videos/review3.mp4" controls></video>
+                    <video src="./assets/videos/review3.mp4" controls volume="0.3"></video>
                 </div>
                 <div class="video-card">
-                    <video src="./assets/videos/review4.mp4" controls></video>
+                    <video src="./assets/videos/review4.mp4" controls volume="0.3"></video>
                 </div>
                 <div class="video-card">
-                    <video src="./assets/videos/review5.mp4" controls></video>
+                    <video src="./assets/videos/review5.mp4" controls volume="0.3"></video>
                 </div>
                 <div class="video-card">
-                    <video src="./assets/videos/review6.mp4" controls></video>
+                    <video src="./assets/videos/review6.mp4" controls volume="0.3"></video>
                 </div>
             </div>
         </div>
